# registerMap

./: CMakeLists.txt  ad9361-phy.xml  default.qss.c  deviceregistermap.cpp  deviceregistermap.hpp  logging_categories.h  main.cpp  mainwindow.cpp  qtextspinbox.cpp  qtextspinbox.hpp  registercontroller.cpp  registercontroller.hpp  registermapcontroller.cpp  registermapcontroller.hpp  registermaptable.cpp  registermaptable.hpp  registermaptemplate.cpp  registermaptemplate.hpp  registermapvalues.cpp  registermapvalues.hpp  regmap.qmodel  regmapSignals.qmodel  regreadwrite.cpp  regreadwrite.hpp  search.cpp  search.hpp  searchbarwidget.hpp  verticalscrollarea.hpp  xmlfilemanager.cpp  xmlfilemanager.hpp
readwrite/: fileregisterreadstrategy.hpp  fileregisterwritestrategy.cpp  iioregisterreadstrategy.hpp  iioregisterwritestrategy.cpp  iregisterreadstrategy.hpp  iregisterwritestrategy.hpp
register/: registerdetailedwidget.cpp  registermodel.cpp  registermodel.hpp  registersimplewidget.cpp  registersimplewidget.hpp  registersimplewidgetfactory.cpp  registersimplewidgetfactory.hpp
register/bitfield/: CMakeLists.txt  bitfielddetailedwidget.cpp  bitfielddetailedwidget.hpp  bitfielddetailedwidgetfactory.cpp  bitfielddetailedwidgetfactory.hpp  bitfieldmodel.cpp  bitfieldmodel.hpp  bitfieldsdetailedwidget.cpp  bitfieldsdetailedwidget.hpp  bitfieldsimplewidget.cpp  bitfieldsimplewidget.hpp  bitfieldsimplewidgetfactory.cpp  bitfieldsimplewidgetfactory.hpp
src/: deviceregistermap.hpp  logging_categories.cpp  logging_categories.h  registercontroller.cpp  registercontroller.hpp  registermapinstrument.hpp  registermaptable.cpp  registermaptable.hpp  registermapvalues.hpp  searchbarwidget.hpp
src/readwrite/: iioregisterreadstrategy.cpp  iioregisterwritestrategy.cpp
test/: tst_registermaptest.cpp  tst_registermaptest.hpp
